# omniHR

./: README.md  setup.cfg
src/repometrics/: command_line.py  fileExtensionProcessor.py  generateSummary.py  languages.json  processLanguage.py  repometrics.py
src/repometrics/data/: extensionLanguage.json  languages.yml
