[metadata]
name = repometrics-vsetiawan
version = 0.0.1
author = Vincent Setiawan
author_email = setiawan.vincent@rocketmail.com
description = a package to display programming language statistics of a folder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vsetiawan/omniHR
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
repometrics = data/extensionLanguage.json

[options.entry_points]
console_scripts =
    repometrics = repometrics.command_line:main